--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Victor+Mono:wght@200&display=swap");
 
 .App {
-  background-image: url("./helper/background-Image.jpg");
+  /* background-image: url("./helper/background-Image.jpg"); */
   height: 100vh;
   background-size: cover;
   background-position: center;
